# desktop-automation-bot

./: .gitignore  FIX_EXECUTION_POLICY.md  GROUNDING_APPROACH.md  HOW_TO_ADD_ICON_TEMPLATE.md  INSTALLATION_STATUS.md  INSTALL_INSTRUCTIONS.txt  INSTALL_UV.md  NEXT_STEPS.md  PIP_TROUBLESHOOTING.md  QUICK_RUN.md  QUICK_START.md  README.md  SETUP.md  activate_venv.bat  activate_venv.ps1  capture_icon_template.py  check_setup.py  pyproject.toml  requirements.txt  run.bat  run.ps1  run_direct.ps1  setup_with_pip.bat  setup_with_pip.ps1  test_icon_detection.py
resources/icons/: README.md
src/: __init__.py  api_client.py  botcity_compat.py  config.py  icon_grounding.py  main.py  notepad_automation.py
